# Project-file-parser

./: CMakeLists.txt  Parser.cpp  Parser.h  main.cpp  tests.cpp
